Salad photo added

--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -6,6 +6,8 @@
 <body>
     <h1>Salad</h1>
     
-    <img src="salad.jpg">
+    <img src="salad.jpg" alt="photo of the salad" height="310" width="310">
+
+    
 </body>
 </html>
