--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -8,6 +8,32 @@
     
     <img src="salad.jpg" alt="photo of the salad" height="310" width="310">
 
-    
+    <h3>Description:</h3>
+    <p>A scrumptious refreshing salad option for everyone</p>
+    <h5>Ingredients:</h5>
+    <ul>
+        <li>1 cucumber</li>
+        <li>1 small carrot</li>
+        <li>1 tomato</li>
+        <li>soya sauce</li>
+        <li>shredded chicken</li>
+        <li>tomato ketchup</li>
+        <li>lemon juice</li>
+        <li>black pepper</li>
+        <li>chilli flakes</li>
+        <li>salt</li>
+        <li>toasted sesame seeds</li>
+    </ul>
+
+    <h3>Steps:</h3>
+    <ol>
+        <li>Chop the cucumber, carrot and tomato into small cubes of roughly equal size</li>
+        <li>Add the shredded chicken to the chopped veggies</li>
+        <li>Add 1 tablespoon of soya sauce and ketchup</li>
+        <li>Add chilli flakes, salt, and black pepper to taste</li>
+        <li>Mix everything and add juice of half a lemon</li>
+        <li>Taste and adjust any seasoning as needed</li>
+        <li>Top with toasted sesame seeds and enjoy!</li>
+    </ol>
 </body>
 </html>
