--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -8,9 +8,9 @@
     
     <img src="salad.jpg" alt="photo of the salad" height="310" width="310">
 
-    <h3>Description:</h3>
+    <p><h3>Description:</h3></p>
     <p>A scrumptious refreshing salad option for everyone</p>
-    <h5>Ingredients:</h5>
+    <p><h5>Ingredients:</h5></p>
     <ul>
         <li>1 cucumber</li>
         <li>1 small carrot</li>
