Links to brownies and dalgona coffee added to index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     </head>
     
     <body>
-        <h1>Odin Recipes</h1>
+        <h1><strong>Odin Recipes</strong></h1>
 
-        <a href="recipes/salad.html">Salad</a>
+        <ul>
+            <li><a href="recipes/salad.html"><em>Refreshing Salad</em></a></li>
+            <li><a href="recipes/brownies.html"><em>Crinkly Brownies</em></a></li>
+            <li><a href="recipes/dalgona-coffee.html"><em>Dalgona Coffee</em></a></li>
+        </ul>
     </body>
 </html>
 
