--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1><strong>Salad</strong></h1>
+    <h1><strong>Refreshing Salad</strong></h1>
     
     <img src="salad.jpg" alt="photo of the salad" height="310" width="310">
 
